2003-02-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (make-module): Changed default size from 1021 to 31
	(since the size now adapts).
	(macro-table, xformer-table): Changed default size from 523 to 61.
	(make-module): Don't call make-hash-table with zero size.

	* Makefile.am (ice9_sources): Added weak-vector.scm.

	* weak-vector.scm: New file.

	* boot-9.scm (module-clear!): Use hash-clear!.
	(module-for-each): Use hash-for-each.
	(module-map): Use hash-map.

2003-02-11  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* boot-9.scm (make-hash-table): Turned primitive.

2003-01-27  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* syncase.scm (guile-macro): Strip syntactic information from
	expression before trying to treat it as a Guile macro call.
	(Thanks to Kevin Ryde.)

2003-01-24  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (parallel, letpar): Rewritten.

2003-01-23  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (par-mapper, n-par-map, n-par-for-each): Use
	futures.

2003-01-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* occam-channel.scm (alt): New syntax.

	* psyntax.ss (self-evaluating?): Removed.  Guile now provides this
	operator as a primitive procedure.
	(build-data): Quote vectors (psyntax.ss requires this).

2003-01-19  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* psyntax.ss (self-evaluating?): Allow procedures implanted in
	source.  (Guile uses this internally.)

2003-01-16  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* psyntax.ss (build-data): Don't quote self-evaluating expressions
	in output.  (We normally *would* like also these expressions to be
	quoted, but until Guile's native macros and syncase cooperates
	better, it is less destructive not to quote.)
	(self-evaluating?): Removed null? (In Guile, the empty list is not
	self-evaluating).
	(sc-chi): Export chi as sc-chi.
	(external-macro): New syntax type.

	* psyntax.pp: Regenerated.

	* compile-psyntax.scm: Set expansion-eval-closure.
